# ElkollegeGuidanceBot

./: .gitignore  Dockerfile  README.md  pyproject.toml
src/assets/: career_guidance_test.yaml  personal_data_agreement.docx
src/elkollege_guidance_bot/: __init__.py  __main__.py  constants.py  models.py  utils.py
src/elkollege_guidance_bot/managers/: config.py  database.py
src/elkollege_guidance_bot/providers/: __init__.py  guidance.py  strings.py
src/elkollege_guidance_bot/telegram_bot/: __init__.py  dispatcher.py  states.py
src/elkollege_guidance_bot/telegram_bot/providers/: __init__.py  buttons.py  keyboards.py
src/elkollege_guidance_bot/telegram_bot/routers/: callbacks.py  commands.py  messages.py
src/elkollege_guidance_bot/telegram_bot/services/: logger.py
