[project]
name = "elkollege_guidance_bot"
version = "1.0.0"
dependencies = [
    "aiogram (==3.29.0)",
    "pyquoks (>=2.7.2,<3.0.0)",
    "pydantic (>=2.13.4,<3.0.0)",
    "pyyaml (>=6.0.3,<7.0.0)",
    "pandas (>=3.0.3,<4.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
]
requires-python = ">=3.14.0,<3.15.0"
authors = [
    { name = "Denis Titovets", email = "den232titovets@yandex.ru>" }
]
description = "Telegram-бот для прохождения профориентации в ЭК"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]

[dependency-groups]
dev = [
    "poetry (>=2.4.1,<3.0.0)",
]

[tool.pytest]
pythonpath = ["src"]

[build-system]
requires = ["poetry-core (>=2.4.0,<3.0.0)"]
build-backend = "poetry.core.masonry.api"
